<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:background="@color/first_color"
    tools:context = ".activities.Create" >

    <TextView
        android:id = "@+id/welcome"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "60dp"
        android:autoSizeTextType = "uniform"
        android:text = "@string/welcome"
        android:textColor = "@color/white"
        android:textSize = "24sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.498"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />

    <EditText
        android:id = "@+id/email"
        android:layout_width = "wrap_content"
        android:layout_height = "60dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/edit_txt_background"
        android:ems = "15"
        android:hint = "@string/e_mail"
        android:paddingStart = "20dp"
        android:textColor = "@color/white"
        android:textColorHint = "@color/text_color"
        app:layout_constraintEnd_toEndOf = "@+id/welcome"
        app:layout_constraintStart_toStartOf = "@+id/welcome"
        app:layout_constraintTop_toBottomOf = "@+id/welcome" />

    <EditText
        android:id = "@+id/password"
        android:layout_width = "wrap_content"
        android:layout_height = "60dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/edit_txt_background"
        android:ems = "15"
        android:hint = "@string/password"
        android:paddingStart = "20dp"
        android:textColor = "@color/white"
        android:textColorHint = "@color/text_color"
        app:layout_constraintEnd_toEndOf = "@+id/email"
        app:layout_constraintStart_toStartOf = "@+id/email"
        app:layout_constraintTop_toBottomOf = "@+id/email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id = "@+id/login"
        android:layout_width = "86dp"
        android:layout_height = "85dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/button"
        android:text = "@string/log_in"
        android:textColor = "@color/black"
        app:layout_constraintEnd_toEndOf = "@+id/password"
        app:layout_constraintStart_toStartOf = "@+id/password"
        app:layout_constraintTop_toBottomOf = "@+id/password" />

    <TextView
        android:id = "@+id/register"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "16dp"
        android:text = "@string/create_register"
        android:textColor = "@color/white"
        android:textSize = "16sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf = "@+id/login"
        app:layout_constraintStart_toStartOf = "@+id/login"
        app:layout_constraintTop_toBottomOf = "@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout >