<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:background="@color/first_color"
    tools:context = ".activities.Create" >

    <TextView
        android:id = "@+id/create_account"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "60dp"
        android:autoSizeTextType = "uniform"
        android:text = "@string/create_new_account"
        android:textColor = "@color/white"
        android:textSize = "24sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />

    <RelativeLayout
        android:id="@+id/picture_layout"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "30dp"
        app:layout_constraintEnd_toEndOf = "@+id/create_account"
        app:layout_constraintStart_toStartOf = "@+id/create_account"
        app:layout_constraintTop_toBottomOf = "@+id/create_account" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id = "@+id/profile"
            android:layout_width = "150dp"
            android:layout_height = "150dp"
            android:layout_centerInParent = "true"
            android:background = "@drawable/picture_background"
            app:civ_border_color = "@color/white"
            app:civ_border_width = "3dp" />

    </RelativeLayout>

    <EditText
        android:id = "@+id/create_id"
        android:layout_width = "300dp"
        android:layout_height = "60dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/edit_txt_background"
        android:hint = "@string/user_id"
        android:paddingStart = "20dp"
        android:textColor = "@color/white"
        android:textColorHint = "@color/text_color"
        app:layout_constraintEnd_toEndOf = "@+id/picture_layout"
        app:layout_constraintStart_toStartOf = "@+id/picture_layout"
        app:layout_constraintTop_toBottomOf = "@+id/picture_layout" />

    <EditText
        android:id = "@+id/create_email"
        android:layout_width = "300dp"
        android:layout_height = "60dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/edit_txt_background"
        android:hint = "@string/e_mail"
        android:paddingStart = "20dp"
        android:textColor = "@color/white"
        android:textColorHint = "@color/text_color"
        app:layout_constraintEnd_toEndOf = "@+id/create_id"
        app:layout_constraintStart_toStartOf = "@+id/create_id"
        app:layout_constraintTop_toBottomOf = "@+id/create_id" />

    <EditText
        android:id = "@+id/create_password"
        android:layout_width = "300dp"
        android:layout_height = "60dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/edit_txt_background"
        android:hint = "@string/password"
        android:paddingStart = "20dp"
        android:textColor = "@color/white"
        android:textColorHint = "@color/text_color"
        app:layout_constraintEnd_toEndOf = "@+id/create_email"
        app:layout_constraintStart_toStartOf = "@+id/create_email"
        app:layout_constraintTop_toBottomOf = "@+id/create_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id = "@+id/create"
        android:layout_width = "120dp"
        android:layout_height = "50dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/create_button_background"
        android:text = "@string/create"
        android:textColor = "@color/black"
        app:layout_constraintEnd_toEndOf = "@+id/create_password"
        app:layout_constraintStart_toStartOf = "@+id/create_password"
        app:layout_constraintTop_toBottomOf = "@+id/create_password" />


</androidx.constraintlayout.widget.ConstraintLayout >