<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpFragment">

    <TextView
        android:id = "@+id/welcome_text_to_sign_up"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "60dp"
        android:autoSizeTextType = "uniform"
        android:text = "@string/create_new_account"
        android:textColor = "@color/white"
        android:textSize = "24sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/picture_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/picture_background"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_id"
        app:layout_constraintEnd_toEndOf="@+id/welcome_text_to_sign_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/welcome_text_to_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_to_sign_up" />

    <ImageView
        android:id="@+id/picture_add"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/picture_add"
        app:layout_constraintBottom_toBottomOf="@+id/picture_profile"
        app:layout_constraintEnd_toEndOf="@+id/picture_profile" />

    <EditText
        android:id="@+id/sign_up_id"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/user_id"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/picture_profile"
        app:layout_constraintStart_toStartOf="@+id/picture_profile"
        app:layout_constraintTop_toBottomOf="@+id/picture_profile"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id = "@+id/sign_up_email"
        android:layout_width = "300dp"
        android:layout_height = "60dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/edit_txt_background"
        android:hint = "@string/e_mail"
        android:paddingStart = "20dp"
        android:textColor = "@color/white"
        android:textColorHint = "@color/text_color"
        app:layout_constraintEnd_toEndOf = "@+id/sign_up_id"
        app:layout_constraintStart_toStartOf = "@+id/sign_up_id"
        app:layout_constraintTop_toBottomOf = "@+id/sign_up_id" />

    <EditText
        android:id = "@+id/sign_up_password"
        android:layout_width = "300dp"
        android:layout_height = "60dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/edit_txt_background"
        android:hint = "@string/password"
        android:paddingStart = "20dp"
        android:textColor = "@color/white"
        android:textColorHint = "@color/text_color"
        app:layout_constraintEnd_toEndOf = "@+id/sign_up_email"
        app:layout_constraintStart_toStartOf = "@+id/sign_up_email"
        app:layout_constraintTop_toBottomOf = "@+id/sign_up_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id = "@+id/sign_up"
        android:layout_width = "120dp"
        android:layout_height = "50dp"
        android:layout_marginTop = "30dp"
        android:background = "@drawable/create_button_background"
        android:text = "@string/create"
        android:textColor = "@color/black"
        app:layout_constraintEnd_toEndOf = "@+id/sign_up_password"
        app:layout_constraintStart_toStartOf = "@+id/sign_up_password"
        app:layout_constraintTop_toBottomOf = "@+id/sign_up_password" />

</androidx.constraintlayout.widget.ConstraintLayout>